.kubernetes/plants.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plants-deployment
  namespace: plantdex
  labels:
    app: plants
spec:
  selector:
    matchLabels:
      app: plants
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: plants
    spec:
      containers:
        - name: plants
          image: eu.gcr.io/plantdex-prod/plants
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "200Mi"
              cpu: "100m"
          ports:
            - containerPort: 4040
---
kind: Service
apiVersion: v1
metadata:
  name: plants-service
  namespace: plantdex
spec:
  selector:
    app: plants
  ports:
    - protocol: TCP
      port: 4040
      targetPort: 4040
