.kubernetes/users.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: users-deployment
  namespace: plantdex
spec:
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
        - name: users
          image: eu.gcr.io/plantdex-prod/users:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "200Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: users-service
  namespace: plantdex
spec:
  selector:
    app: users
  ports:
    - port: 80
      targetPort: 8080
