.kubernetes/web.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-deployment
  namespace: plantdex
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: eu.gcr.io/plantdex-prod/web:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "100Mi"
              cpu: "50m"
            limits:
              memory: "200Mi"
              cpu: "100m"
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: web-service
  namespace: plantdex
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 3000
