.kubernetes/ingress.yaml
kind: HTTPProxy
apiVersion: projectcontour.io/v1
metadata:
  name: plantdex
  namespace: plantdex
spec:
  virtualhost:
    fqdn: plantdex.app
    tls:
      secretName: tls-secret
    rateLimitPolicy:
      local:
        requests: 20
        unit: minute
  routes:
    - conditions:
        - prefix: /api/plants
      services:
        - name: plants-service
          port: 4040
      responseHeadersPolicy:
        set:
          - name: Strict-Transport-Security
            value: "max-age=63072000; includeSubDomains; preload"
    - conditions:
        - prefix: /api/users
      services:
        - name: users-service
          port: 4041
      responseHeadersPolicy:
        set:
          - name: Strict-Transport-Security
            value: "max-age=63072000; includeSubDomains; preload"
    - conditions:
        - prefix: /
      services:
        - name: web-service
          port: 3000
      responseHeadersPolicy:
        set:
          - name: Content-Security-Policy
            value: "default-src 'self' *.plantdex.app; style-src 'unsafe-inline'"
          - name: Referrer-Policy
            value: "strict-origin-when-cross-origin"
          - name: Strict-Transport-Security
            value: "max-age=63072000; includeSubDomains; preload"
          - name: X-Content-Type-Options
            value: "nosniff"
          - name: X-Frame-Options
            value: "SAMEORIGIN"
          - name: X-XSS-Protection
            value: "1; mode=block"
